# mephi_ifib

./: .env_example  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
ifib/: admin.py  apps.py  forms.py  models.py  tasks.py
ifib/api/: serializers.py  tools.py  urls.py
ifib/api/article/: serializers.py  urls.py  views.py
ifib/api/auth/: serializers.py  tools.py  urls.py  views.py
ifib/api/enums/: __init__.py  error_type_enum.py
ifib/api/home/: serializers.py  urls.py  views.py
ifib/api/knowledge_base/: serializers.py  urls.py  views.py
ifib/api/nuclear_medicine_intro/: urls.py
ifib/core/: pagination.py
ifib/enums/: __init__.py  educational_status_enum.py  equipment_group_enum.py  interest_sphere_enum.py  knowledge_base_enum.py  practice_group_enum.py  role_enum.py
ifib/migrations/: 0001_initial.py  0002_article.py  0003_teammember.py  0004_feedbackform.py  0004_feedbackform_alter_user_registration_token.py  0005_knowledgebase_alter_feedbackform_options_and_more.py  0006_alter_user_registration_token.py  0007_rename_description_terms_definition_and_more.py  0008_equipmentgroup_alter_article_cover_and_more.py  0008_films_alter_article_cover_alter_teammember_image_and_more.py  0009_alter_equipment_options_and_more.py  0009_equipment_alter_user_registration_token.py  0010_add_initial_data.py  0010_practice_alter_user_registration_token.py  0011_podcasts_alter_user_registration_token.py
mephi_ifib/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
specification/: openapi.yaml  openapi.yml
(+23 files in other folders)
